ui/apps/themes/style.less
/* ... */
/* empty desktop */
#io-ox-desktop {
    top: 32px;
    z-index: 1;
    overflow: hidden;
}

/* window manager */
#io-ox-screens {
    top: 40px;
    overflow: hidden;
    z-index: 10;
}

#io-ox-windowmanager {
    overflow: hidden;
}

/* notifications */

#io-ox-notifications {

    position: absolute;
    z-index: 30;
    top: 40px;
    bottom: 0;
    font-size: 14px;
    background-color: @notification-pane-background;
    background-clip: padding-box;
    border-left: 2px solid rgba(0, 0, 0, 0.30);
    display: none;
    .overflow-x(hidden);
    .overflow-y(auto);

    &:focus {
        outline: 0;
    }

    @media (max-width: 480px), (max-device-width: 480px) and (orientation: portrait) {
        width: 100%;
        background-color: #222;
        &.active { display:block; }
    }

    @media (min-width: 481px) {
        width: 350px;
        right: -350px;
         &.active { right: 0; }
    }

    &.active {
        display: block;
    }

    html.high-contrast & {
        background-color: @black; //HC
    }

    #io-ox-notifications-display {

        padding: 24px 14px;

        .section-title {

            font-family: @light-font-family;
            font-weight: 300;
            font-size: 16px;
            line-height: 24px;
            margin: 0 0 7px 0;
            padding: 0 14px;
            border: 0;

            html.high-contrast & {
                color: @white;
            }

        }

        .clear-button {
            float: right;
            line-height: inherit;
            padding: 0;
            color: #ccc;
            font-size: 14px;
        }

        .notifications {
            margin: 14px 0 0 0;
        }

        .notifications:first-child {
            margin-top: 0;
        }

        .item {

            color: #888;
            padding: 10px 14px;
            cursor: pointer;

            &:last-child {
                border-bottom: 0;
            }

            &:focus {
                outline: 1px solid rgba(0, 0, 0, 0.30);
                background-color: rgba(0, 0, 0, 0.05);
            }

            &:hover {
                background-color: rgba(0, 0, 0, 0.05);
            }

            .title {
                color: #333;
                pointer-events: none;
                font-weight: bold;
                .ellipsis();

                html.high-contrast & {
                    color: @white;
                }
            }

            .subject {
                .ellipsis();
                pointer-events: none;
            }

            .empty {
                font-style: italic;
                color: #aaa;
            }

            .content {
                color: #aaa;
                line-height: 16px;
                max-height: 5 * 16px; /* 5 rows */
                margin-top: 3px;
                .ellipsis();
            }

            .time {
                float: right;
            }

            .location {
                color: #aaa;
            }

            .actions {
                text-align: right;
                margin: 5px 0 5px 0;
            }
        }

        .open-app {
            padding: 7px 14px;
        }
    }
}

#io-ox-notifications-overlay {
    display: none;
    background-color: transparent;
    background-color: rgba(255, 255, 255, 0.01);
    top: 40px;
    right: 350px;
    z-index: 20;

    &.active {
        display: block;
    }
}

@media (max-width: 480px), (max-device-width: 480px) and (orientation: portrait) {
    .notifications-open { display:none; } // To hide mobile portal when notifications area is open on mobile devices
    #io-ox-notifications-overlay { right: 0; }
}

.io-ox-alert {

    position: absolute;
    top: 30px;
    left: 50%;
    margin-left: -230px;
    width: 460px;
    background-color: rgba(255, 255, 255, 0.95);
    z-index: 65500;
    box-shadow: 0 0 50px -1px rgba(0, 0, 0, 0.30);
    outline: 0;
    opacity: 0;
    .border-radius(5px);
    .transition(opacity 0.20s ease-out);

    &:focus {
        background-color: #fff;
    }

    &.appear {
        opacity: 1.0;
    }

    .headline {
        margin: 0 0 7px 0;
        font-size: 14px;
        line-height: 20px;
    }

    .message {
        padding: 20px 60px 20px 70px;
        min-height: 70px;
        & > div {
            max-height: 300px;
            overflow: auto;
        }
    }

    .icon {
        position: absolute;
        top: 15px;
        left: 10px;
        font-size: 24px;
        color: #aaa;
        width: 50px;
        text-align: center;
    }

    .close {
        position: absolute;
        top: 8px;
        right: 15px;
        width: 36px;
        line-height: 40px;
        text-align: center;
        display: inline-block;
        outline: 0;
    }

    .close:hover, .close:focus {
        background-color: rgba(0, 0, 0, 0.10);
    }

    &.io-ox-alert-info .icon { color: #08c; }
    &.io-ox-alert-error .icon { color: #a00; }
    &.io-ox-alert-warning .icon { color: #fc0; }
    &.io-ox-alert-success .icon { color: @green-light; }
    &.io-ox-alert-busy .icon { color: #555; }
    &.io-ox-alert-success { cursor: pointer; }
}

@media (max-width: 480px), (max-device-width: 480px) {
    .io-ox-alert {
        left: 10px;
        right: 10px;
        width: auto;
        margin-left: 0;
        cursor: pointer;
        .icon { font-size: 20px; width: 30px; }
        .message { padding: 20px 20px 20px 50px; }
        .close { display: none; }
    }
}

#io-ox-notifications-popups {

    position: absolute;
    top: 48px;
    width: 400px;
    right: 10px;
    z-index: 65201; /* above modal dialog; above relogin screen */

    .alert {
        margin-bottom: 0.5em;
        .box-shadow(1px 1px 3px -1px rgba(0, 0, 0, 0.80));
    }
}


#io-ox-windowmanager-pane {
    left: 0;
    width: 100%;
}
/* ... */

